tests/ui/parser/using_no_brace_operator.sol
// Ported from test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_no_brace.sol.

using f as - for uint256 global; //~ ERROR: expected
